style: fix overflow main view image

--- a/assets/app.css
+++ b/assets/app.css
@@ -110,6 +110,7 @@ footer {
   left: -50%;
   position: relative;
   transition: transform 0.4s 0s ease;
+  overflow: hidden;
 }
 
 @media (orientation: portrait) {
